syntax = "proto3";
option optimize_for = CODE_SIZE;

message SessionIdRequest {
    string sessionId = 1;
}

message SessionIdResponse {
    optional string error = 1;
    optional string sessionId = 2;
}

service AutoCertifierRpc {
    rpc getSessionId (SessionIdRequest) returns (SessionIdResponse);
}
